[gd_scene load_steps=14 format=3 uid="uid://casmgiqdgedlc"]

[ext_resource type="Script" path="res://scenes/machines/oxygen_balloons_stand/oxygen_balloons_stand.gd" id="1_by0uq"]
[ext_resource type="Texture2D" uid="uid://nlmcg1bocek1" path="res://assets/machines/oxygen_balloons.png" id="1_rxktq"]
[ext_resource type="Shader" path="res://scenes/machines/machine_selection.gdshader" id="2_pgxym"]
[ext_resource type="PackedScene" uid="uid://dsgvpxp0f35do" path="res://scenes/machines/interactable_component.tscn" id="3_mfc02"]
[ext_resource type="PackedScene" uid="uid://b24lajp77bfi6" path="res://scenes/ui/control_menu/control_menu.tscn" id="5_1sj3u"]
[ext_resource type="FontFile" uid="uid://dk4gdruibe4ps" path="res://assets/ui/zx_palm.ttf" id="6_vneif"]
[ext_resource type="PackedScene" uid="uid://cn0ja50u1boe" path="res://scenes/machines/breackable_component.tscn" id="7_nn3vg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2lqj"]
resource_local_to_scene = true
shader = ExtResource("2_pgxym")
shader_parameter/is_enabled = false

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3nuta"]
size = Vector2(38, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynvdv"]
size = Vector2(36, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvm7i"]
size = Vector2(62, 60)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8uoep"]
load_path = "res://.godot/imported/ui_icons.png-ba95d9fa9c0eef28aec73f493d978e3b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_jhiod"]
atlas = SubResource("CompressedTexture2D_8uoep")
region = Rect2(1, 0, 14, 16)

[node name="OxygenBalloonsStand" type="StaticBody2D"]
y_sort_enabled = true
position = Vector2(0, -5)
collision_mask = 3
script = ExtResource("1_by0uq")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_n2lqj")
texture = ExtResource("1_rxktq")

[node name="shadow" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.568627)
y_sort_enabled = true
position = Vector2(0, -4)
texture = SubResource("PlaceholderTexture2D_3nuta")
offset = Vector2(0, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ynvdv")

[node name="InteractableComponent" parent="." instance=ExtResource("3_mfc02")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
position = Vector2(-7, 4)
shape = SubResource("RectangleShape2D_hvm7i")
debug_color = Color(0.625467, 0.531468, 0.0415124, 0.42)

[node name="ControlMenu" parent="." instance=ExtResource("5_1sj3u")]
visible = false
offset_left = -37.0
offset_top = -55.0
offset_right = 46.0
offset_bottom = -15.0

[node name="OxygenIcon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = -35.0
offset_right = 4.0
offset_bottom = -19.0

[node name="Icon" type="TextureRect" parent="OxygenIcon"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_jhiod")
expand_mode = 4
stretch_mode = 3

[node name="Label" type="Label" parent="OxygenIcon"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 0
offset_left = -6.0
offset_top = 3.0
offset_right = 22.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_vneif")
theme_override_font_sizes/font_size = 6
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BreakableComponent" parent="." instance=ExtResource("7_nn3vg")]

[connection signal="interactable_activated" from="InteractableComponent" to="." method="_on_interactable_activated"]
[connection signal="interactable_deactivated" from="InteractableComponent" to="." method="_on_interactable_deactivated"]
